# calltree

./: .demangle.py.swp  .gitignore  LICENSE  README.md  __init__.py  callgraph.py  calltree.py  demangle.py  init.py  plugin.json  requirements.txt
doc/: architecture.md
test/: CMakeLists.txt  README.md
test/python/: example_outgoing_reach.py  standalone_smoke.py  test_callgraph_api.py
test/src/: call_graph.cpp  call_graph.hpp  sample_main.cpp
test/tests/: test_call_graph.cpp  test_framework.hpp
